--- a/todo_list_watchdog_app/pubspec.yaml
+++ b/todo_list_watchdog_app/pubspec.yaml
@@ -19,7 +19,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: ^3.7.0
+  sdk: ^3.7.2
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -33,6 +33,9 @@ dependencies:
   
   # flashy_tab_bar2
   flashy_tab_bar2: ^0.0.10
+
+  # Swtich package
+  flutter_switch: ^0.3.2
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
