--- a/todo_list_watchdog_app/pubspec.yaml
+++ b/todo_list_watchdog_app/pubspec.yaml
@@ -37,6 +37,9 @@ dependencies:
   # Swtich package
   flutter_switch: ^0.3.2
 
+  # fire icon
+  font_awesome_flutter: ^10.7.0
+
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
