--- a/environment_api_app/pubspec.yaml
+++ b/environment_api_app/pubspec.yaml
@@ -39,6 +39,23 @@ dependencies:
   get: ^4.7.2
   # http
   http: ^1.3.0
+   # sqflite
+  sqflite: ^2.4.2
+  # Path
+  path: ^1.9.1
+  # Slider
+  flutter_slidable: ^4.0.0
+  # Image picker
+  image_picker: ^1.1.2
+  # 위치 정보
+  geocoding: ^3.0.0
+  # GPS 신호
+  geolocator: ^13.0.4
+  # 지도
+  flutter_map: ^8.1.1
+  # 지도를 현위치로 옮기기
+  latlong2: ^0.9.1
+
 
 dev_dependencies:
   flutter_test:
