--- a/shoes_store_app_local/shoe_mart_app_jack/pubspec.yaml
+++ b/shoes_store_app_local/shoe_mart_app_jack/pubspec.yaml
@@ -54,6 +54,10 @@ dependencies:
   latlong2: ^0.9.1
   # Get Strorage
   get_storage: ^2.1.1
+  # intl
+  intl: ^0.20.2
+  # 카카오 주소
+  remedi_kopo: ^0.0.2
 
 dev_dependencies:
   flutter_test:
